--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       </li>
       <li class="nav-item list-inline-item" style='margin-top:20px'>
         <a class="nav-link" href="http://github.com/adnjoo" style='display:inline;padding: 0.5rem 0 0.5rem 1rem;'
-          target="_blank"><i class="fab fa-github"></i></a>
+          target="_blank"><i class="fab fa-github fa-lg"></i></a>
         <a class="nav-link" href="https://twitter.com/adnjoo" style='display:inline;padding: 0.5rem 0rem'
-          target="_blank"><i class="fab fa-twitter"></i></a>
+          target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
         <a class="nav-link" href="https://linkedin.com/in/adnjoo" style='display:inline;padding: 0.5rem 0rem'
-          target="_blank"><i class="fab fa-linkedin"></i></a>
+          target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
       </li>
     </ul>
   </nav>
