bigger fa icons

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
       <a class='mobilemenu' href="#experience">Experience</a>
       <a class='mobilemenu' href="#skills">Skills</a>
       <a class='mobilemenu' href="#projects">Projects</a>
-      <a class="nav-link mobilemenu" href="http://github.com/adnjoo" target="_blank"><i class="fab fa-github"></i></a>
+      <a class="nav-link mobilemenu" href="http://github.com/adnjoo" target="_blank">
+        <i class="fab fa-github fa-lg"></i></a>
       <a class="nav-link mobilemenu" href="https://twitter.com/adnjoo" target="_blank"><i
-          class="fab fa-twitter"></i></a>
+          class="fab fa-twitter fa-lg"></i></a>
       <a class="nav-link mobilemenu" href="https://linkedin.com/in/adnjoo" target="_blank"><i
-          class="fab fa-linkedin"></i></a>
+          class="fab fa-linkedin fa-lg"></i></a>
     </div>
     <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
