--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a class='mobilemenu' href="#experience">Experience</a>
       <a class='mobilemenu' href="#skills">Skills</a>
       <a class='mobilemenu' href="#projects">Projects</a>
-      <a class="nav-link mobilemenu" href="http://github.com/adnjoo" target="_blank">
+      <a class="nav-link mobilemenu" href="https://github.com/adnjoo" target="_blank">
         <i class="fab fa-github fa-lg"></i></a>
       <a class="nav-link mobilemenu" href="https://twitter.com/adnjoo" target="_blank"><i
           class="fab fa-twitter fa-lg"></i></a>
@@ -52,7 +52,7 @@
         <a class="nav-link" href="#projects">Projects</a>
       </li>
       <li class="nav-item list-inline-item" style='margin-top:20px'>
-        <a class="nav-link" href="http://github.com/adnjoo" style='display:inline;padding: 0.5rem 0 0.5rem 1rem;'
+        <a class="nav-link" href="https://github.com/adnjoo" style='display:inline;padding: 0.5rem 0 0.5rem 1rem;'
           target="_blank"><i class="fab fa-github fa-lg"></i></a>
         <a class="nav-link" href="https://twitter.com/adnjoo" style='display:inline;padding: 0.5rem 0rem'
           target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
