add resume button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <header>
             <h1 class='element' style='display:inline'></h1>
           </header>
-          <p>And I'm a <strong>Software Engineer.</strong></p>
+          <p>And I'm a <strong>Software Builder.</strong></p>
           <a href="#skills" class="button large scrolly">Learn about what I do</a>
         </div>
       </div>
@@ -200,7 +200,7 @@
                 <input type="text" name="subject" id="subject" placeholder="Subject" />
               </div>
               <div class="col-12">
-                <textarea name="message" id="message" placeholder="Message"></textarea>
+                <textarea name="message" id="message" placeholder="Message" rows="3" style='height:auto'></textarea>
               </div>
               <div class="col-12">
                 <ul class="actions">
@@ -226,6 +226,13 @@
             </li>
             <li>
               <a href="https://github.com/adnjoo" class="icon brands fa-github"><span class="label">Github</span></a>
+            </li>
+            <br>
+            <h3>Resume:</h3>
+            <li>
+              <a href="https://docs.google.com/document/d/1FP8dyISChCaGzRYDxEFewaMmbrfmPNe-3R-RSbH3l-I/edit?usp=sharing" class="icon far fa-file"
+              style='background-color: white;'>
+              <span class="label">Resume</span></a>
             </li>
           </ul>
           <hr />
