--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </header>
       <div class="row">
         <div class="col-12">
-          <form method="post" target="_blank" action="https://mailto:adnjoo@protonmail.com" enctype="text/plain" onsubmit="alertFunction()">
+          <form method="post" action="https://mailto:adnjoo@protonmail.com" enctype="text/plain" onsubmit="alertFunction()">
             <div class="row">
               <div class="col-6 col-12-small">
                 <input type="text" name="name" id="name" placeholder="Name" />
