--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
   <!-- typed js -->
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.0/typed.js" ></script>
   <script>
     // Form submission function
     const alertFunction = () => {
