--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </header>
       <div class="row">
         <div class="col-12">
-          <form action="mailto:adnjoo@protonmail.com" method='post' enctype="application/x-www-form-urlencoded"
+          <form target="_blank" action="https://mailto:adnjoo@protonmail.com" method='post' enctype="application/x-www-form-urlencoded"
             onsubmit="alertFunction()">
             <div class="row">
               <div class="col-6 col-12-small">
