--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     let typewriter = new Typewriter('.element', {
       strings: ["Hi, I'm Andrew."],
       autoStart: true,
-      pauseFor: 100000
+      pauseFor: 1000000
     });
   </script>
   <!-- glide js -->
@@ -270,6 +270,9 @@
       type: "carousel",
       perView: 6,
       focusAt: "center",
+      autoplay: 2000,
+      hoverpause: true,
+      keyboard: true,
       breakpoints: {
         800: {
           perView: 3,
