edit resume link

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <br>
             <h3>Resume:</h3>
             <li>
-              <a href="https://docs.google.com/document/d/1FP8dyISChCaGzRYDxEFewaMmbrfmPNe-3R-RSbH3l-I/edit?usp=sharing"
+              <a href="https://drive.google.com/file/d/1ZGiEOrBNtdUelgVYgx0i9duJCWcjSEcr/view?usp=sharing"
                 class="icon far fa-file" style='background-color: white;'>
                 <span class="label">Resume</span></a>
             </li>
