--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h3>
               <a href="https://github.com/adnjoo/movie-app">Movie app</a>
             </h3>
-            <p>Made with reactjs, express, postgres.</p>
+            <p>Made with HTML, JS, CSS, Express, and Postgres. <br>Currently porting front-end to React.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
@@ -159,7 +159,7 @@
             <h3>
               <a href="https://github.com/adnjoo/expensetracker">ExpenseTracker</a>
             </h3>
-            <p>Ruby on Rails app using postgres.</p>
+            <p>Ruby on Rails app using Postgres for the database.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
@@ -170,7 +170,7 @@
             <h3>
               <a href="https://github.com/adnjoo/weather-app">Weather App</a>
             </h3>
-            <p>Made with reactjs.</p>
+            <p>Made with React, react-helmet, abstract-api, and weatherapi.</p>
           </article>
         </div>
       </div>
