--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                 src="https://raw.githubusercontent.com/adnjoo/movie-app/main/v0.0.0.3.png" alt=""
                 style="max-height: 240px; object-fit: cover" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/movie-app">Movie app</a>
+              <a href="https://github.com/adnjoo/movie-app">Movie-App</a>
             </h3>
-            <p>Made with HTML, JS, CSS, Express, and Postgres. <br>Currently porting front-end to React.</p>
+            <p>Made with Postgres, Express, React and Node.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
@@ -168,7 +168,7 @@
                 src="https://raw.githubusercontent.com/adnjoo/weather-app/master/scrn4.png" alt=""
                 style="max-height: 240px; object-fit: cover" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/weather-app">Weather App</a>
+              <a href="https://github.com/adnjoo/weather-app">Weather-App</a>
             </h3>
             <p>Made with React, react-helmet, abstract-api, and weatherapi.</p>
           </article>
