--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
             <a href="https://github.com/adnjoo/movie-app" class="image featured"><img
-                src="https://raw.githubusercontent.com/adnjoo/movie-app/main/v0.0.0.5.png" alt=""
-                style="max-height: 240px; object-fit: cover" /></a>
+                src="https://raw.githubusercontent.com/adnjoo/movie-app-auth-frontend/main/scrn7.png" alt=""
+                style="max-height: 240px; object-fit: contain" /></a>
             <h3>
               <a href="https://github.com/adnjoo/movie-app">Movie-App</a>
             </h3>
@@ -155,7 +155,7 @@
           <article class="box style2">
             <a href="https://github.com/adnjoo/expensetracker" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/ExpenseTracker/main/scrn3.png" alt=""
-                style="max-height: 240px; object-fit: cover" /></a>
+                style="max-height: 240px; object-fit: contain" /></a>
             <h3>
               <a href="https://github.com/adnjoo/expensetracker">ExpenseTracker</a>
             </h3>
@@ -166,7 +166,7 @@
           <article class="box style2">
             <a href="https://github.com/adnjoo/weather-app" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/weather-app/master/scrn4.png" alt=""
-                style="max-height: 240px; object-fit: cover" /></a>
+                style="max-height: 240px; object-fit: contain" /></a>
             <h3>
               <a href="https://github.com/adnjoo/weather-app">Weather-App</a>
             </h3>
