--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
       <div class="row">
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/movie-app" class="image featured"><img
+            <a href="https://github.com/adnjoo/movie-app-auth-frontend" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/movie-app-auth-frontend/main/scrn7.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/movie-app">Movie-App</a>
+              <a href="https://github.com/adnjoo/movie-app-auth-frontend">Movie-App</a>
             </h3>
             <p>Made with Postgres, Express, React and Node.</p>
           </article>
