--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h3>
               <a href="https://github.com/adnjoo/movie-app-auth-frontend">Movie-App</a>
             </h3>
-            <p>Made with Postgres, Express, React and Node.</p>
+            <p>This app helps you save movies; made with postgres, express, react and node.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
@@ -159,7 +159,7 @@
             <h3>
               <a href="https://github.com/adnjoo/expensetracker">ExpenseTracker</a>
             </h3>
-            <p>Ruby on Rails app using Postgres for the database.</p>
+            <p>Full stack application using ruby, rails, and postgres.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
@@ -170,7 +170,7 @@
             <h3>
               <a href="https://github.com/adnjoo/weather-app">Weather-App</a>
             </h3>
-            <p>Made with React, react-helmet, abstract-api, and weatherapi.</p>
+            <p>Made with react, react-helmet, abstract-api, and weatherapi.</p>
           </article>
         </div>
       </div>
