--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
             <h3>
               <a href="https://github.com/adnjoo/movie-app-auth-frontend">Movie-App</a>
             </h3>
-            <p>This app helps you save movies; made with postgres, express, react and node.</p>
+            <p>PERN full stack web app that helps you save cool movies.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/expensetracker" class="image featured"><img
-                src="https://raw.githubusercontent.com/adnjoo/ExpenseTracker/main/scrn3.png" alt=""
+            <a href="https://github.com/adnjoo/artexplorer" class="image featured"><img
+                src="https://raw.githubusercontent.com/adnjoo/artExplorer/main/scrn2.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/expensetracker">ExpenseTracker</a>
+              <a href="https://github.com/adnjoo/artexplorer">artexplorer</a>
             </h3>
-            <p>Full stack application using ruby, rails, and postgres.</p>
+            <p>PERN full stack web app that helps you save cool artists.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
