update website links

--- a/index.html
+++ b/index.html
@@ -142,33 +142,33 @@
       <div class="row">
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/movie-app-auth-frontend" class="image featured"><img
-                src="https://raw.githubusercontent.com/adnjoo/movie-app-auth-frontend/main/scrn6.png" alt=""
+            <a href="https://github.com/adnjoo/Movie-App" class="image featured"><img
+                src="https://raw.githubusercontent.com/adnjoo/Movie-App/main/scrn6.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/movie-app-auth-frontend">Movie-App</a>
+              <a href="https://github.com/adnjoo/Movie-App">Movie App</a>
             </h3>
             <p>PERN full stack web app that helps you save cool movies.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/artexplorer" class="image featured"><img
-                src="https://raw.githubusercontent.com/adnjoo/artExplorer/main/scrn2.png" alt=""
+            <a href="https://github.com/adnjoo/Art-Explorer" class="image featured"><img
+                src="https://raw.githubusercontent.com/adnjoo/Art-Explorer/main/scrn2.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/artexplorer">artexplorer</a>
+              <a href="https://github.com/adnjoo/Art-Explorer">Art Explorer</a>
             </h3>
             <p>PERN full stack web app that helps you save cool artists.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/weather-app" class="image featured"><img
-                src="https://raw.githubusercontent.com/adnjoo/weather-app/master/scrn4.png" alt=""
+            <a href="https://github.com/adnjoo/React-Weather" class="image featured"><img
+                src="https://raw.githubusercontent.com/adnjoo/React-Weather/master/scrn4.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/weather-app">Weather-App</a>
+              <a href="https://github.com/adnjoo/React-Weather">React Weather</a>
             </h3>
             <p>Made with react, react-helmet, abstract-api, and weatherapi.</p>
           </article>
