edit second link

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
         </div>
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/Art-Explorer" class="image featured"><img
-                src="https://raw.githubusercontent.com/adnjoo/Art-Explorer/main/scrn2.png" alt=""
+            <a href="https://github.com/adnjoo/Sonic" class="image featured"><img
+                src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/Art-Explorer">Art Explorer</a>
+              <a href="https://github.com/adnjoo/Sonic">Sonic</a>
             </h3>
-            <p>PERN full stack web app that helps you save cool artists.</p>
+            <p>Spotify clone using Next.js 12, and the Spotify API that lets you mirror music on devices.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
