--- a/index.html
+++ b/index.html
@@ -142,33 +142,33 @@
       <div class="row">
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/Movie-App" class="image featured"><img
+            <a href="https://andrew-movie-app.netlify.app/" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/Movie-App/main/scrn11.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/Movie-App">Movie App</a>
+              <a href="https://andrew-movie-app.netlify.app/">Movie App</a>
             </h3>
             <p>PERN full stack web app that helps you save cool movies.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/Sonic" class="image featured"><img
+            <a href="https://sonic-azure.vercel.app/" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/Sonic">Sonic</a>
+              <a href="https://sonic-azure.vercel.app/">Sonic</a>
             </h3>
             <p>Spotify clone using Next.js 12, and the Spotify API that lets you mirror music on devices.</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
           <article class="box style2">
-            <a href="https://github.com/adnjoo/React-Weather" class="image featured"><img
+            <a href="https://adnjoo.github.io/React-Weather/" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/React-Weather/master/scrn5.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
-              <a href="https://github.com/adnjoo/React-Weather">React Weather</a>
+              <a href="https://adnjoo.github.io/React-Weather/">React Weather</a>
             </h3>
             <p>Made with react, react-helmet, abstract-api, and weatherapi.</p>
           </article>
