remove contact form

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="#top">About</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <!-- <li><a href="#contact">Contact</a></li> -->
     </ul>
   </nav>
 
@@ -174,20 +174,20 @@
           </article>
         </div>
       </div>
-      <footer>
+      <!-- <footer>
         <a href="#contact" class="button large scrolly">Get in touch with me</a>
-      </footer>
+      </footer> -->
     </div>
   </article>
 
   <!-- Contact -->
-  <article id="contact" class="wrapper style4">
+   <article id="contact" class="wrapper style4">
     <div class="container medium">
-      <header>
+      <!-- <header>
         <h2>Have me make stuff for you.</h2>
-      </header>
+      </header> -->
       <div class="row">
-        <div class="col-12">
+        <!-- <div class="col-12">
           <form action="mailto:adnjoo@protonmail.com" method='post'>
             <div class="row">
               <div class="col-6 col-12-small">
@@ -212,7 +212,7 @@
               </div>
             </div>
           </form>
-        </div>
+        </div> -->
         <div class="col-12">
           <hr />
           <h3>Find me on ...</h3>
@@ -244,7 +244,7 @@
         </ul>
       </footer>
     </div>
-  </article>
+  </article> 
 
   <!-- Scripts -->
   <script src="assets/js/jquery.min.js"></script>
