--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <br>
             <h3>Resume:</h3>
             <li>
-              <a href="https://drive.google.com/file/d/1KZaKG33T4A447gTgsfXOSyWbMpu0fW5l/view?usp=sharing"
+              <a href="https://docs.google.com/document/d/1TlYly6E_Ix_casYSKPwpkndvf-s-oqn07y6NuGcKr6o/edit?usp=sharing"
                 class="icon far fa-file" style='background-color: white;'>
                 <span class="label">Resume</span></a>
             </li>
