edit Sonic image

--- a/index.html
+++ b/index.html
@@ -141,36 +141,36 @@
       </header>
       <div class="row">
         <div class="col-4 col-6-medium col-12-small">
-          <article class="box style2">
+          <article class="box style2" style="max-height:400px">
             <a href="https://andrew-movie-app.netlify.app/" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/Movie-App/main/scrn11.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
               <a href="https://andrew-movie-app.netlify.app/">Movie App</a>
             </h3>
-            <p>PERN full stack web app that helps you save cool movies.</p>
+            <p>PERN full stack web app that helps you save cool movies</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
-          <article class="box style2">
+          <article class="box style2" style="max-height:400px">
             <a href="https://sonic-azure.vercel.app/" class="image featured"><img
-                src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn.png" alt=""
+                src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn2.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
               <a href="https://sonic-azure.vercel.app/">Sonic</a>
             </h3>
-            <p>Spotify clone using Next.js 12, and the Spotify API that lets you mirror music on devices.</p>
+            <p>Spotify clone using Next.js, and the Spotify API</p>
           </article>
         </div>
         <div class="col-4 col-6-medium col-12-small">
-          <article class="box style2">
+          <article class="box style2" style="max-height:400px">
             <a href="https://adnjoo.github.io/React-Weather/" class="image featured"><img
                 src="https://raw.githubusercontent.com/adnjoo/React-Weather/master/scrn5.png" alt=""
                 style="max-height: 240px; object-fit: contain" /></a>
             <h3>
               <a href="https://adnjoo.github.io/React-Weather/">React Weather</a>
             </h3>
-            <p>Made with react, react-helmet, abstract-api, and weatherapi.</p>
+            <p>Made with react, react-helmet, abstract-api, and weatherapi</p>
           </article>
         </div>
       </div>
@@ -183,9 +183,6 @@
   <!-- Contact -->
    <article id="contact" class="wrapper style4">
     <div class="container medium">
-      <!-- <header>
-        <h2>Have me make stuff for you.</h2>
-      </header> -->
       <div class="row">
         <!-- <div class="col-12">
           <form action="mailto:adnjoo@protonmail.com" method='post'>
