edit project summaries

--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
               <h3>
                 <a href="https://andrew-movie-app.netlify.app/">Movie App</a>
               </h3>
-              <p>PERN full stack web app that helps you save cool movies</p>
+              <p>
+                PERN full stack web app that helps you save cool movies | TMDB
+                API
+              </p>
             </article>
           </div>
           <div class="col-4 col-6-medium col-12-small">
@@ -205,7 +208,10 @@
               <h3>
                 <a href="https://sonic-azure.vercel.app/">Sonic</a>
               </h3>
-              <p>Spotify clone using Next.js, and the Spotify API</p>
+              <p>
+                Spotify clone using Next.js | Spotify API (Spotify Premium
+                account required)
+              </p>
             </article>
           </div>
           <div class="col-4 col-6-medium col-12-small">
@@ -223,7 +229,7 @@
                   >React Weather</a
                 >
               </h3>
-              <p>Made with react, react-helmet, abstract-api, and weatherapi</p>
+              <p>Made with React, React-Helmet, Abstract-API, and WeatherAPI</p>
             </article>
           </div>
         </div>
