--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <!-- glide js css -->
+    <!-- Glide JS CSS -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.css"
@@ -25,7 +25,7 @@
         <li><a href="#top">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
-        <!-- <li><a href="#contact">Contact</a></li> -->
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
@@ -44,7 +44,7 @@
             <header>
               <h1 class="element" style="display: inline"></h1>
             </header>
-            <p>And I'm a <strong>Software Builder.</strong></p>
+            <h2>And I'm a Software Builder.</h2>
             <a href="#skills" class="button large scrolly"
               >Learn about what I do</a
             >
@@ -233,9 +233,6 @@
             </article>
           </div>
         </div>
-        <!-- <footer>
-        <a href="#contact" class="button large scrolly">Get in touch with me</a>
-      </footer> -->
       </div>
     </article>
 
@@ -243,40 +240,15 @@
     <article id="contact" class="wrapper style4">
       <div class="container medium">
         <div class="row">
-          <!-- <div class="col-12">
-          <form action="mailto:adnjoo@protonmail.com" method='post'>
-            <div class="row">
-              <div class="col-6 col-12-small">
-                <input type="text" name="name" id="name" placeholder="Name" />
-              </div>
-              <div class="col-6 col-12-small">
-                <input type="text" name="email" id="email" placeholder="Email" />
-              </div>
-              <div class="col-12">
-                <input type="text" name="subject" id="subject" placeholder="Subject" />
-              </div>
-              <div class="col-12">
-                <textarea name="message" id="message" placeholder="Message" rows="3" style='height:auto'></textarea>
-              </div>
-              <div class="col-12">
-                <ul class="actions">
-                  <li><input type="submit" value="Send Message" /></li>
-                  <li>
-                    <input type="reset" value="Clear Form" class="alt" />
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </form>
-        </div> -->
           <div class="col-12">
             <hr />
-            <h3>Find me on ...</h3>
+            <h3>Find me on</h3>
             <ul class="social">
               <li>
                 <a
                   href="https://twitter.com/adnjoo"
                   class="icon brands fa-twitter"
+                  target="_blank"
                   ><span class="label">Twitter</span></a
                 >
               </li>
@@ -284,6 +256,7 @@
                 <a
                   href="https://www.linkedin.com/in/adnjoo"
                   class="icon brands fa-linkedin-in"
+                  target="_blank"
                   ><span class="label">LinkedIn</span></a
                 >
               </li>
@@ -291,6 +264,7 @@
                 <a
                   href="https://github.com/adnjoo"
                   class="icon brands fa-github"
+                  target="_blank"
                   ><span class="label">Github</span></a
                 >
               </li>
@@ -301,6 +275,7 @@
                   href="https://docs.google.com/document/d/1TlYly6E_Ix_casYSKPwpkndvf-s-oqn07y6NuGcKr6o/edit?usp=sharing"
                   class="icon far fa-file"
                   style="background-color: white"
+                  target="_blank"
                 >
                   <span class="label">Resume</span></a
                 >
@@ -310,7 +285,7 @@
           </div>
         </div>
         <footer>
-          <h4 style="color: white">&copy; Andrew Njoo (2021)</h4>
+          <h3 style="color: white">&copy; Andrew Njoo (2021)</h3>
         </footer>
       </div>
     </article>
