--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Andrew's Portfolio Site</title>
+    <title>Andrew's Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <link rel="icon" href="./assets/whale.png" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <!-- Glide JS CSS -->
     <link
