--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               </h3>
               <p>
                 Spotify clone using Next.js | Spotify API (Spotify Premium
-                account required)
+                required)
               </p>
             </article>
           </div>
@@ -230,7 +230,7 @@
                   >React Weather</a
                 >
               </h3>
-              <p>Made with React, React-Helmet, Abstract-API, and WeatherAPI</p>
+              <p>Made with React | React-Helmet | Abstract-API | Weather API</p>
             </article>
           </div>
         </div>
