--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Animate.css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
 
   <body class="is-preload">
@@ -25,7 +30,7 @@
       <ul class="container">
         <li><a href="#top">About</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -34,7 +39,9 @@
     <article id="top" class="wrapper style1">
       <div class="container">
         <div class="row">
-          <div class="col-4 col-5-large col-12-medium">
+          <div
+            class="col-4 col-5-large col-12-medium animate__animated animate__pulse animate__slow animate__infinite infinite"
+          >
             <span class="image fit"
               ><img
                 src="https://avatars.githubusercontent.com/u/22807629?v=4"
@@ -46,7 +53,9 @@
               <h1 class="element" style="display: inline"></h1>
             </header>
             <h2>And I'm a Software Builder.</h2>
-            <a href="#skills" class="button large scrolly"
+            <a
+              href="#skills"
+              class="button large scrolly animate__animated animate__backInRight"
               >Learn about what I do</a
             >
           </div>
@@ -165,22 +174,24 @@
         </div>
         <div class="row aln-center"></div>
         <footer>
-          <a href="#portfolio" class="button large scrolly"
+          <a
+            href="#projects"
+            class="button large scrolly animate__animated animate__backInRight"
             >See some of my recent work</a
           >
         </footer>
       </div>
     </article>
 
-    <!-- Portfolio -->
-    <article id="portfolio" class="wrapper style3">
+    <!-- Projects -->
+    <article id="projects" class="wrapper style3">
       <div class="container">
         <header>
-          <h2>Here’s some stuff I made recently.</h2>
+          <h2>Projects</h2>
         </header>
         <div class="row">
           <div class="col-4 col-6-medium col-12-small">
-            <article class="box style2" style="max-height: 400px">
+            <article class="box style2 b-radius-20px" style="max-height: 400px">
               <a
                 href="https://andrew-movie-app.netlify.app/"
                 class="image featured"
@@ -199,7 +210,7 @@
             </article>
           </div>
           <div class="col-4 col-6-medium col-12-small">
-            <article class="box style2" style="max-height: 400px">
+            <article class="box style2 b-radius-20px" style="max-height: 400px">
               <a href="https://sonic-azure.vercel.app/" class="image featured"
                 ><img
                   src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn2.png"
@@ -216,7 +227,7 @@
             </article>
           </div>
           <div class="col-4 col-6-medium col-12-small">
-            <article class="box style2" style="max-height: 400px">
+            <article class="box style2 b-radius-20px" style="max-height: 400px">
               <a
                 href="https://adnjoo.github.io/React-Weather/"
                 class="image featured"
@@ -245,14 +256,15 @@
             <hr />
             <h3>Find me on</h3>
             <ul class="social">
-              <li>
+              <!-- <li>
+                Color Clash
                 <a
                   href="https://twitter.com/adnjoo"
                   class="icon brands fa-twitter"
                   target="_blank"
                   ><span class="label">Twitter</span></a
                 >
-              </li>
+              </li> -->
               <li>
                 <a
                   href="https://www.linkedin.com/in/adnjoo"
