--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
     <article id="top" class="wrapper style1">
       <div class="container">
         <div class="row">
-          <div
-            class="col-4 col-5-large col-12-medium animate__animated animate__pulse animate__slow animate__infinite infinite"
-          >
+          <div class="col-4 col-5-large col-12-medium">
             <span class="image fit"
               ><img
                 src="https://avatars.githubusercontent.com/u/22807629?v=4"
@@ -174,9 +172,7 @@
         </div>
         <div class="row aln-center"></div>
         <footer>
-          <a
-            href="#projects"
-            class="button large scrolly animate__animated animate__backInRight"
+          <a href="#projects" class="button large scrolly"
             >See some of my recent work</a
           >
         </footer>
