add margin-top to projects

--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
                 ><img
                   src="https://raw.githubusercontent.com/adnjoo/Movie-App/main/scrn11.png"
                   alt=""
-                  style="max-height: 240px; object-fit: contain"
+                  style="
+                    max-height: 240px;
+                    object-fit: contain;
+                    margin-top: 20px;
+                  "
               /></a>
               <h3>
                 <a href="https://andrew-movie-app.netlify.app/">Movie App</a>
@@ -211,7 +215,11 @@
                 ><img
                   src="https://raw.githubusercontent.com/adnjoo/Sonic/main/scrn2.png"
                   alt=""
-                  style="max-height: 240px; object-fit: contain"
+                  style="
+                    max-height: 240px;
+                    object-fit: contain;
+                    margin-top: 20px;
+                  "
               /></a>
               <h3>
                 <a href="https://sonic-azure.vercel.app/">Sonic</a>
@@ -230,7 +238,11 @@
                 ><img
                   src="https://raw.githubusercontent.com/adnjoo/React-Weather/master/scrn5.png"
                   alt=""
-                  style="max-height: 240px; object-fit: contain"
+                  style="
+                    max-height: 240px;
+                    object-fit: contain;
+                    margin-top: 20px;
+                  "
               /></a>
               <h3>
                 <a href="https://adnjoo.github.io/React-Weather/"
